--- a/proyMicroServicios1/src/main/resources/application.properties
+++ b/proyMicroServicios1/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.password=
 #spring.datasource.initialize=true
 #spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
+spring.devtools.livereload.enabled=true
